--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -126,6 +126,14 @@ jobs:
                 npm install --ignore-scripts $NEW_VERSION
                 npm install --ignore-scripts
               fi
+          - id: emphasize
+            subsystem: deps
+            label: dependencies
+            run: |
+              ./tools/dep_updaters/update-emphasize.sh > temp-output
+              cat temp-output
+              tail -n1 temp-output | grep "NEW_VERSION=" >> "$GITHUB_ENV" || true
+              rm temp-output
           - id: eslint
             subsystem: tools
             label: tools
