--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -34,8 +34,8 @@ jobs:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     env:
-      CC: 'sccache gcc'
-      CXX: 'sccache g++'
+      CC: sccache gcc
+      CXX: sccache g++
       SCCACHE_GHA_ENABLED: 'true'
     steps:
       - uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b  # v4.1.4
