--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,24 +1,33 @@
 {
   "name": "Node.js Core Developer Environment",
+  "image": "nodejs/devcontainer:nightly",
   "extensions": [
     "github.vscode-pull-request-github",
     "ms-vsliveshare.vsliveshare",
     "vscode-icons-team.vscode-icons",
-    "visualstudioexptteam.vscodeintellicode"
+    "visualstudioexptteam.vscodeintellicode",
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint"
   ],
-  "image": "nodejs/devcontainer:nightly",
-  "initializeCommand": "docker system prune -f -a",
   "settings": {
     "terminal.integrated.profiles.linux": {
       "zsh (login)": {
         "path": "zsh",
         "args": ["-l"]
       }
-    }
+    },
+    "editor.formatOnSave": true,
+    "eslint.alwaysShowStatus": true
   },
+  "initializeCommand": [
+    "docker system prune -f -a"
+  ],
   "runArgs": [
-    // Allow node process to bind to port numbers below 1024 without root permissions
     "--cap-add=CAP_NET_BIND_SERVICE"
-  ]
+  ],
+  "postCreateCommand": "npm install",
+  "features": {
+    "github-cli": "latest"
+  },
+  "remoteUser": "node"
 }
-
