--- a/test/.eslintrc.yaml
+++ b/test/.eslintrc.yaml
@@ -80,6 +80,8 @@ overrides:
   - files:
       - es-module/*.js
       - es-module/*.mjs
+      - parallel/**/*.js
+      - parallel/**/*.mjs
       - parallel/*.js
       - parallel/*.mjs
       - sequential/*.js
