--- a/.github/workflows/test-ubsan.yml
+++ b/.github/workflows/test-ubsan.yml
@@ -37,7 +37,7 @@ permissions:
 
 jobs:
   test-ubsan:
-    if: false  # Temporary disabled. Reference: https://github.com/nodejs/node/pull/52293#issuecomment-2059270585
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     env:
       CC: sccache gcc
