--- a/.github/workflows/test-ubsan.yml
+++ b/.github/workflows/test-ubsan.yml
@@ -50,7 +50,7 @@ jobs:
           persist-credentials: false
       - name: Store suppressions path
         run: |
-          echo "UBSAN_OPTIONS=suppressions=$GITHUB_WORKSPACE/suppressions.supp" >> $GITHUB_ENV
+          echo "UBSAN_OPTIONS=suppressions=$GITHUB_WORKSPACE/suppressions.supp:report_error_type=1:print_stacktrace=1" >> $GITHUB_ENV
       - name: Set up Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d  # v5.1.0
         with:
