--- a/.github/workflows/close-invalid.yml
+++ b/.github/workflows/close-invalid.yml
@@ -1,47 +1,46 @@
+---
 name: Close Issues Based on Conditions
-
 on:
   issues:
-    types: [opened]
-
+    types:
+      - opened
 jobs:
   close_invalid_issues:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Close issues without content
-      uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea  # v7.0.1
-      with:
-        script: |
-          const issue = context.payload.issue;
-          const issueBody = issue.body;
-          const issueNumber = issue.number;
-          const owner = context.repo.owner;
-          const repo = context.repo.repo;
+      - name: Close issues without content
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea  #v7.0.1
+        with:
+          script: >
+            const issue = context.payload.issue;
+            const issueBody = issue.body;
+            const issueNumber = issue.number;
+            const owner = context.repo.owner;
+            const repo = context.repo.repo;
 
-          if (issueBody.length < 10) {
-            // Set the 'invalid' label (this removes all other labels and sets 'invalid')
-            await github.issues.setLabels({
-              owner: owner,
-              repo: repo,
-              issue_number: issueNumber,
-              labels: ['invalid']
-            });
+            if (issueBody.length < 10) {
+              // Set the 'invalid' label (this removes all other labels and sets 'invalid')
+              await github.issues.setLabels({
+                owner: owner,
+                repo: repo,
+                issue_number: issueNumber,
+                labels: ['invalid']
+              });
 
-            // Close the issue with the state reason 'not planned'
-            await github.issues.update({
-              owner: owner,
-              repo: repo,
-              issue_number: issueNumber,
-              state: 'closed',
-              state_reason: 'not_planned'
-            });
+              // Close the issue with the state reason 'not planned'
+              await github.issues.update({
+                owner: owner,
+                repo: repo,
+                issue_number: issueNumber,
+                state: 'closed',
+                state_reason: 'not_planned'
+              });
 
-            // Add a comment explaining why the issue was closed
-            await github.issues.createComment({
-              owner: owner,
-              repo: repo,
-              issue_number: issueNumber,
-              body: `This issue has been closed as it's body is too short`
-            });
-          }
+              // Add a comment explaining why the issue was closed
+              await github.issues.createComment({
+                owner: owner,
+                repo: repo,
+                issue_number: issueNumber,
+                body: `This issue has been closed as it's body is too short`
+              });
+            }
