--- a/.github/workflows/find-inactive-collaborators.yml
+++ b/.github/workflows/find-inactive-collaborators.yml
@@ -50,7 +50,7 @@ jobs:
 
             ---
 
-            @nodejs/tsc, please review the [offboarding tasks](https://github.com/nodejs/node/blob/main/doc/contributing/offboarding.md).
+            @nodejs/tsc Please follow up with the [offboarding tasks](https://github.com/nodejs/node/blob/main/doc/contributing/offboarding.md).
           commit-message: 'meta: move one or more collaborators to emeritus'
           labels: meta
           title: 'meta: move one or more collaborators to emeritus'
