--- a/.github/workflows/tsc-ping.yml
+++ b/.github/workflows/tsc-ping.yml
@@ -3,17 +3,21 @@ on:
     paths:
       - deps/**
 
+permissions:
+  pull-requests: write
+  issues: write
+
 jobs:
   ping-tsc:
     runs-on: ubuntu-latest
     name: Ping the TSC
     if: github.event.pull_request.user.login != 'nodejs-github-bot'  # Check if user is not the bot
     steps:
-      - uses: marocchino/sticky-pull-request-comment@v2
+      - uses: marocchino/sticky-pull-request-comment@331f8f5b4215f0445d3c07b4967662a32a2d3e31  # v2.9.0
         with:
           number: ${{ github.event.pull_request.number }}
           message: |
             /cc @nodejs/tsc
-      - uses: actions-ecosystem/action-add-labels@v1
+      - uses: actions-ecosystem/action-add-labels@f146b04613e5d5b57ff227cba3db0954551fbc6a  # v1.1.0
         with:
           labels: blocked
